# game

./: .gitignore  README.md  jest.config.js  package.json  snowpack.config.js  tsconfig.json  tsconfig.server.json
.github/workflows/: ci.yml  client-ci.yml  server-ci.yml
assets/: README.md  assets.tiled-project
assets/maps/: test.xml  test2.xml
assets/sprites/: character.json  mushroom.json
assets/templates/: portal.tx
assets/tilesets/: basic-grass.xml
client/: README.md  index.html  index.tsx  jest.config.js  package.json  snowpack.config.js  tsconfig.json
client/app/: app.tsx  overlay.css  overlay.tsx
client/core/: debug.ts  index.ts
client/src/: env.ts  index.tsx
common/: component.ts  runtime.ts
common/map/: object.ts
common/math/: collision.ts  common.ts  index.ts  matrix3.ts  matrix4.ts  vector2.ts  vector3.ts  (+1 more)
docs/: CNAME  build-manifest.json  index.html
public/: index.html
schemas/: input.pkt  state.pkt
scripts/: update-schema.py
server/: Cargo.toml  README.md  architecture.md  config.toml  design.md  env.ts  index.test.ts  index.ts
server/game/: entity.ts  server.ts  session.ts
server/map/: level.ts
server/net/: index.ts  socket.ts  worker.ts
server/scripts/: setup-db.py
server/src/: config.rs  db.rs  main.rs  server.rs  util.rs
server/src/map/: base.rs  mod.rs
server/src/map/maps/: test.xml
server/src/map/tilesets/: basic-grass.xml
server/src/net/: acceptor.rs  auth.rs  message.rs  mod.rs  session.rs  socket.rs
server/src/schemas/: input.rs  mod.rs  state.rs
server/util/: index.ts  log.ts  worker.ts
(+108 files in other folders)
